--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate && prisma db push --accept-data-loss"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
+    "date-fns": "^2.30.0",
+    "next": "14.0.3",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "typescript": "^5"
   }
 }
