Auth system (kinda)

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_URL="mysql://root:admin@localhost:3306/nye"
 NEXT_PUBLIC_API_URL="http://localhost:3000/api/v1/"
+PASSWORD="IReallyDontWannaSetThis"
+JWT_SECRET="123456asd4567dsda45sd4ac1sa87c1aADadf"
+NEXT_PUBLIC_JWT_SECRET="123456asd4567dsda45sd4ac1sa87c1aADadf"
