--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "cookiejs": "^2.1.3",
     "date-fns": "^2.30.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "14.0.3",
     "prisma": "^5.6.0",
     "react": "^18",
@@ -19,6 +21,7 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
